# ranked-tracker

./: .env  .env.production  next.config.ts  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: obs-plugin-release.yml
obs-plugin/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  installer.iss
obs-plugin/cmake/: FindLibobs.cmake
obs-plugin/cmake/common/: bootstrap.cmake
obs-plugin/data/locale/: en-US.ini
obs-plugin/scripts/: generate-obs-lib.ps1
obs-plugin/src/: api-client.cpp  api-client.h  ocr-engine.cpp  ocr-engine.h  plugin-main.cpp  plugin-support.h  sr-source.cpp  sr-source.h
src/: proxy.ts
src/app/[locale]/(marketing)/: layout.tsx
src/app/[locale]/(marketing)/download/: page.tsx
src/app/api/download/: route.ts
src/locales/: en.json  fr.json
